waste changes done

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -351,6 +351,51 @@ header .intro-text {
 #services .service-desc {
   margin-bottom: 40px;
 }
+/* driving section*/
+#driving {
+  padding: 100px 0;
+  /* background: linear-gradient(to right, #6372ff 0%, #5ca9fb 100%); */
+  background: linear-gradient(to right, #7ae8dd 0%, #9cb6e7 100%);
+  color: #fff;
+}
+#driving .driving-desc {
+  margin: 10px 10px 20px;
+}
+#driving h2 {
+  color: #fff;
+}
+#driving .section-title h2::after {
+  position: absolute;
+  content: "";
+  background: rgba(255, 255, 255, 0.3);
+  height: 4px;
+  width: 60px;
+  bottom: 0;
+  margin-left: -30px;
+  left: 50%;
+}
+#driving i.fa {
+  font-size: 42px;
+  width: 120px;
+  height: 120px;
+  padding: 40px 0;
+  background: linear-gradient(to right, #6372ff 0%, #5ca9fb 100%);
+  border-radius: 50%;
+  color: #fff;
+  box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.05);
+}
+#driving h3 {
+  font-weight: 500;
+  padding: 5px 0;
+  color: #fff;
+}
+#driving p {
+  color: rgba(255, 255, 255, 0.75);
+}
+#driving .service-desc {
+  margin-bottom: 40px;
+}
+
 /* Portfolio Section */
 #portfolio {
   padding: 100px 0;
@@ -600,6 +645,171 @@ label {
 #footer a:hover {
   border-bottom: 2px solid #608dfd;
 }
+
+/*circulity page*/
+#circulity {
+  padding: 100px 0 60px;
+  /* background: linear-gradient(to right, #6372ff 0%, #5ca9fb 100%); */
+  background: linear-gradient(to right, #63dce0 0%, #1a7165 100%);
+  color: rgba(255, 255, 255, 0.75);
+}
+#circulity .section-title {
+  margin-bottom: 40px;
+}
+#circulity .section-title p {
+  font-size: 16px;
+}
+#circulity h2 {
+  color: #fff;
+  margin-top: 10px;
+  margin-bottom: 15px;
+  padding-bottom: 15px;
+}
+#circulity .section-title h2::after {
+  position: absolute;
+  content: "";
+  background: rgba(255, 255, 255, 0.3);
+  height: 4px;
+  width: 60px;
+  bottom: 0;
+  left: 30px;
+}
+#circulity h3 {
+  color: #fff;
+  margin-top: 80px;
+  margin-bottom: 25px;
+  padding-bottom: 20px;
+  font-weight: 400;
+}
+#circulity form {
+  padding-top: 20px;
+}
+#circulity .text-danger {
+  color: #cc0033;
+  text-align: left;
+}
+#circulity .btn-custom {
+  margin: 30px 0;
+  background: transparent;
+  border: 2px solid #fff;
+}
+#circulity .btn-custom:hover {
+  color: #1f386e;
+  background: #fff;
+}
+label {
+  font-size: 12px;
+  font-weight: 400;
+  font-family: "Open Sans", sans-serif;
+  float: left;
+}
+#circulity .form-control {
+  display: block;
+  width: 100%;
+  padding: 6px 12px;
+  font-size: 16px;
+  line-height: 1.42857143;
+  color: #444;
+  background-color: #fff;
+  background-image: none;
+  border: 1px solid #ddd;
+  border-radius: 0;
+  -webkit-box-shadow: none;
+  box-shadow: none;
+  -webkit-transition: none;
+  -o-transition: none;
+  transition: none;
+}
+#contact .form-control:focus {
+  border-color: #999;
+  outline: 0;
+  -webkit-box-shadow: transparent;
+  box-shadow: transparent;
+}
+
+/* capcity build page */
+
+#capcity_build{
+  
+    padding: 100px 0 60px;
+    /* background: linear-gradient(to right, #6372ff 0%, #5ca9fb 100%); */
+    background: linear-gradient(to right, #63dce0 0%, #1a7165 100%);
+    color: rgba(255, 255, 255, 0.75);
+  }
+  #capcity_build .section-title {
+    margin-bottom: 40px;
+  }
+  #capcity_build .section-title p {
+    font-size: 16px;
+  }
+  #capcity_build h2 {
+    color: #fff;
+    margin-top: 10px;
+    margin-bottom: 15px;
+    padding-bottom: 15px;
+  }
+  #capcity_build .section-title h2::after {
+    position: absolute;
+    content: "";
+    background: rgba(255, 255, 255, 0.3);
+    height: 4px;
+    width: 60px;
+    bottom: 0;
+    left: 30px;
+  }
+  #capcity_build h3 {
+    color: #fff;
+    margin-top: 80px;
+    margin-bottom: 25px;
+    padding-bottom: 20px;
+    font-weight: 400;
+  }
+  #capcity_build form {
+    padding-top: 20px;
+  }
+  #capcity_build .text-danger {
+    color: #cc0033;
+    text-align: left;
+  }
+  #capcity_build .btn-custom {
+    margin: 30px 0;
+    background: transparent;
+    border: 2px solid #fff;
+  }
+  #capcity_build .btn-custom:hover {
+    color: #1f386e;
+    background: #fff;
+  }
+  label {
+    font-size: 12px;
+    font-weight: 400;
+    font-family: "Open Sans", sans-serif;
+    float: left;
+  }
+  #capcity_build .form-control {
+    display: block;
+    width: 100%;
+    padding: 6px 12px;
+    font-size: 16px;
+    line-height: 1.42857143;
+    color: #444;
+    background-color: #fff;
+    background-image: none;
+    border: 1px solid #ddd;
+    border-radius: 0;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+    -webkit-transition: none;
+    -o-transition: none;
+    transition: none;
+  }
+  #capcity_build .form-control:focus {
+    border-color: #999;
+    outline: 0;
+    -webkit-box-shadow: transparent;
+    box-shadow: transparent;
+  }
+  
 
 @media (max-width: 768px) {
   #about img {
