--- a/public/css/style.css
+++ b/public/css/style.css
@@ -809,6 +809,31 @@ label {
     -webkit-box-shadow: transparent;
     box-shadow: transparent;
   }
+
+  .phone-link {
+    text-decoration: underline;
+    /* background-color: rgb(30, 244, 30); */
+    color: white; /* For the text color on the green background */
+    padding: 0.2em; /* Add some padding to make the background more visible */
+    border-radius: 4px; 
+  }
+  
+  .phone-link:hover {
+    background-color: rgb(187, 227, 187); /* Highlight color on hover */
+  }
+
+  .email-link {
+    text-decoration: underline;
+    /* background-color: green; */
+    color: white; /* For the text color on the green background */
+    padding: 0.2em; /* Add some padding to make the background more visible */
+    border-radius: 4px; /* Optional: Add some rounding to the background edges */
+  }
+  
+  .email-link:hover {
+    background-color: rgb(187, 227, 187); /* Highlight color on hover */
+  }
+  
   
 
 @media (max-width: 768px) {
