--- a/public/css/style.css
+++ b/public/css/style.css
@@ -80,6 +80,7 @@ hr {
   background-color: #fff;
   border-color: rgba(231, 231, 231, 0);
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.15);
+  font-family: 'Oswald', sans-serif;
 }
 #menu a.navbar-brand {
   font-family: 'Oswald', sans-serif;
